--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,10 +1,6 @@
 <input type="text" [(ngModel)]="carName">
 <button (click)="addCar()" class="btn btn-primary">Добавить машину</button>
-<!--1.-->
-<!--<p *ngIf="!addCarStatus">Машина не добавлена</p>-->
-<!--<p *ngIf="addCarStatus"> Машина добавлена</p>-->
 
-<!--2.-->
 <p *ngIf="!addCarStatus; else successStatus">Машина не добавлена</p>
 <ng-template #successStatus>
   <p>Машина добавлена</p>
@@ -12,5 +8,9 @@
 
 <hr>
 
-<app-car></app-car>
-<app-car></app-car>
+<app-car *ngFor="let car of cars"></app-car>
+<ul>
+  <li *ngFor="let item of items; let idx = index">
+    <b>{{idx + 1}}</b> - <i>{{item.name}}</i>
+  </li>
+</ul>
