Passing parameters to the component

--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -8,5 +8,7 @@
 
 <hr>
 
-<app-car *ngFor="let car of cars"></app-car>
+<!-- [] -->
+
+<app-car *ngFor="let car of cars" [carItem]="car"></app-car>
 
