Passing parameters to the component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   <div class="row">
     <div class="col-xs-12">
       <app-cars></app-cars>
+      <hr>
+      <app-my></app-my>
     </div>
   </div>
 </div>
