Passing parameters from component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="container">
   <h1>Angular Components</h1>
 
-  <app-post-form></app-post-form>
+  <app-post-form
+    (onAdd)="updatePosts($event)"
+  ></app-post-form>
 
   <hr />
 
@@ -12,6 +14,10 @@
   </app-post>
 
   <hr />
+
+  <app-skills
+    (addSkill)="updateSkills($event)"
+  ></app-skills>
 
   <app-my
     *ngFor="let s of skills"
