--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,10 @@
-<input type="text" class="form-control" placeholder="Заголовок" [(ngModel)]="skillTitle">
+<input
+  type="text" class="form-control"
+  placeholder="Заголовок"
+  [(ngModel)]="skillTitle"
+  #titleInput
+>
 <input type="text" class="form-control" placeholder="Текст" [(ngModel)]="skillText">
 
 <button class="btn" (click)="onAdd()">Добавить</button>
+<button class="btn" (click)="focusTitle()">Focus title</button>
